force-app/main/default/objects/OrderItem/fields/Credit_Update_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Credit_Update_Trigger__c</fullName>
    <label>Credit Update Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Credit_Update_Trigger</valueSetName>
    </valueSet>
</CustomField>