force-app/main/default/objects/OrderItem/fields/Usage_Meter__c.field-meta.xml
<CustomField>
    <fullName>Usage_Meter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usage Meter</label>
    <type>Checkbox</type>
</CustomField>