force-app/main/default/objects/OrderItem/fields/Usage_Term__c.field-meta.xml
<CustomField>
    <fullName>Usage_Term__c</fullName>
    <label>Usage Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>