force-app/main/default/objects/OrderItem/validationRules/UsageMeter_and_ConsumesCredit_Exclusive.validationRule-meta.xml
<ValidationRule>
    <fullName>UsageMeter_and_ConsumesCredit_Exclusive</fullName>
    <active>true</active>
    <description>An Order Product can&apos;t be a Usage Meter and Consume Credit at the same time.</description>
    <errorConditionFormula>AND(Usage_Meter__c, Consumes_Credit__c)</errorConditionFormula>
    <errorMessage>An Order Product can&apos;t be a Usage Meter and Consume Credit at the same time.</errorMessage>
</ValidationRule>